# Hack-for-green

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  LICENSE  MAINTAINERS.md  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: architecture.md  deployment_guide.md  user_manual.md
reports/: API_REFERENCE.md  HACKATHON_REPORT.md  IMPACT_REPORT.md  MARKET_ANALYSIS.md  PRODUCT_STRATEGY.md  ROADMAP.md  STATIC_ANALYSIS.md  TEST_COVERAGE.md  innovation_deep_dive.md  model_zoo.md  security_audit.md
src/offroad_ai/cli/: calibrate.py  evaluate.py  test_ultra.py  train.py
src/offroad_ai/core/: config.py  dataset.py  ensemble.py  models.py  utils.py
src/offroad_ai/pipeline/: pathway_engine.py  stream_simulator.py  watcher.py
tests/: test_core.py  test_pipeline.py
